# trayle

./: .gitignore  Cargo.toml  README.md
dilema/: Cargo.toml
dilema/src/: lib.rs  main.rs
drm_scanner/: Cargo.toml
drm_scanner/src/: connector_scanner.rs  crtc_mapper.rs  display_info.rs  drm_scanner.rs  lib.rs
examples/: backend.rs
examples/raw_input/: Cargo.toml
examples/raw_input/src/: main.rs
examples/raw_rendering/: Cargo.toml
examples/raw_rendering/src/: main.rs
src/: backend.rs  config.rs  cursor.rs  frontend.rs  input.rs  input_handler.rs  lib.rs  main.rs  render.rs  shell.rs  state.rs  trayle.rs  winit.rs
src/backend/: mod.rs  raw.rs  tty.rs  udev.rs  winit.rs
src/backend/tty/: drm_lease.rs  drm_syncobj.rs
src/grabs/: move_grab.rs  resize_grab.rs
src/handlers/: buffer.rs  compositor.rs  dmabuf.rs  drm_lease.rs  drm_syncobj.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs  xwayland_shell.rs  xwm.rs
src/shell/: elements.rs  mod.rs  ssd.rs  utils.rs
src/stash/: cursor.rs  drawing.rs  input_handler.rs
src/utils/: display_info.rs  drm_scanner.rs  mod.rs
src/utils/drm_scanner/: connector_scanner.rs  crtc_mapper.rs
vice/: Cargo.toml
vice/src/: lib.rs  main.rs
visor/: Cargo.toml
visor/src/: main.rs
