[package]
name = "visor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wayland-client = "0.31.8"

[dependencies.smithay-client-toolkit]
git = "https://github.com/Smithay/client-toolkit.git"

